--- a/app/aws.ini
+++ b/app/aws.ini
@@ -1,3 +1,3 @@
 [default]
-aws_access_key_id = AKIAIVFQMFY4Z3HI2XRA
-aws_secret_access_key = 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
+aws_access_key_id = AKIAJBCWFQYDGQTGKT6A
+aws_secret_access_key = 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
