--- a/app/composer.json
+++ b/app/composer.json
@@ -3,11 +3,12 @@
     "description": "example using AWS sdk for php",
     "type": "project",
     "require": {
-        "aws/aws-sdk-php-resources": "^0.3.0"
+        "aws/aws-sdk-php-resources": "^0.3.0",
+        "Slim": "^3.9.1"
     },
     "authors": [
         {
-            "name": "Oscar Sanchez",
+            "name": "Oscar Sánchez",
             "email": "oscar.sanchez@orbis.com.pe"
         }
     ]
