--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM amazonlinux:latest
 RUN yum -y update && yum -y install \
     php70 \
     php70-phar \
+    php70-pecl-apcu \
     git \
     openssh \
     unzip
